# vault-note-android

./: .gitignore  README.md  gradle.properties  settings.gradle.kts
android/: README.md  build.gradle.kts
android/app/: build.gradle.kts
android/app/schemas/com.vaultnote.core.database.VaultDatabase/: 1.json  5.json
android/docs/: architecture.md  backup-format.md  sync-protocol.md
app/: build.gradle.kts  gradle.lockfile  lint.xml  proguard-rules.pro
app/schemas/com.vaultnote.core.database.VaultDatabase/: 2.json  3.json  4.json
app/src/main/: AndroidManifest.xml
app/src/main/res/color/: note_action_tint.xml  note_favorite_tint.xml  note_pin_tint.xml  note_row_action_tint.xml
app/src/main/res/drawable/: ic_add.xml  ic_add_attachment.xml  ic_archive.xml  ic_check.xml  ic_delete.xml  ic_edit.xml  ic_error.xml  ic_lock.xml  ic_pdf.xml  ic_pin.xml  (+3 more)
desktop/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/docs/: production-sync-requirements.md
desktop/src/: App.svelte  main.ts  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: main.json
desktop/src-tauri/src/: backup.rs  commands.rs  crypto.rs  database.rs  error.rs  lib.rs  main.rs  models.rs  repository.rs  runtime.rs  services.rs  storage.rs  validation.rs  vault_key.rs
desktop/src/lib/: api.ts  autosave.test.ts  autosave.ts  models.ts
docs/: architecture.md  backup-format.md  encryption-format.md  performance.md  security-model.md  sync-protocol.md  testing.md  threat-model.md
gradle/: libs.versions.toml
(+264 files in other folders)
