[package]
name = "vaultnote-desktop"
version = "0.1.0"
description = "Offline-first VaultNote desktop client"
authors = ["VaultNote contributors"]
edition = "2024"
rust-version = "1.88"

[lib]
name = "vaultnote_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
argon2 = { version = "0.5.3", features = ["std", "zeroize"] }
aes-gcm = { version = "0.10.3", features = ["std", "zeroize"] }
base64 = "0.22.1"
hkdf = "0.12.4"
pbkdf2 = "0.12.2"
rand_core = { version = "0.6.4", features = ["getrandom"] }
rfd = { version = "0.17.2", default-features = false }
rusqlite = { version = "0.40.1", features = ["bundled-sqlcipher-vendored-openssl"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.151"
sha2 = "0.10.9"
subtle = "2.6.1"
tauri = { version = "2.11.5", features = [] }
thiserror = "2.0.19"
uuid = { version = "1.23.5", features = ["serde", "v4"] }
unicode-normalization = "0.1.24"
zeroize = { version = "1.8.2", features = ["derive"] }
zip = { version = "6.0.0", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
rfd = { version = "0.17.2", default-features = false, features = ["wayland", "xdg-portal"] }

[dev-dependencies]
tempfile = "3.27.0"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = "symbols"
